Issue #SB-17865 Mobile app banner overlaps with content card on mobile browser

--- a/src/app/client/src/assets/styles/layout/_footer.scss
+++ b/src/app/client/src/assets/styles/layout/_footer.scss
@@ -161,7 +161,9 @@
     left: 0;
     z-index: inherit;
     box-shadow: 0 -5px 20px 5px rgba(0, 0, 0, 0.2);
-
+    .app-download{
+      padding-top: 12px;
+    }
     a {
       padding-bottom: 0 !important;
     }
